# homeassistant-eink-display

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lwipopts.h
mechanical/: Enclosure_ePaper_266-Case.stl  Enclosure_ePaper_266-Cover.stl  Enclosure_ePaper_266.FCStd
src/: config_sample.h  eink_display_266.c  eink_display_266.h  http_client.c  http_client.h  main.c
